applications/base/skyline/skyline.yaml
apiVersion: v1
kind: Service
metadata:
  name: skyline
spec:
  ports:
    - port: 80
      targetPort: 80
  selector:
    app: skyline
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: skyline
spec:
  replicas: 1
  selector:
    matchLabels:
      app: skyline
  template:
    metadata:
      labels:
        app: skyline
    spec:
      containers:
        - name: skyline
          image: ghcr.io/static-web-server/static-web-server:2
          ports:
            - containerPort: 80
          volumeMounts:
            - name: files
              mountPath: /public/client-metadata.json
              subPath: client-metadata.json
          resources:
            requests:
              cpu: 5m
              memory: 4Mi
            limits:
              cpu: 50m
              memory: 8Mi
      volumes:
        - name: files
          configMap:
            name: skyline-files
